Bug 475659 - Selection for ISO integration is missing in the Dolphin menu after the update
Summary: Selection for ISO integration is missing in the Dolphin menu after the update
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: plugins: ISO mounting (other bugs)
Version First Reported In: 23.08.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Kwon-Young Choi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-15 12:11 UTC by Trinity
Modified: 2023-11-18 05:05 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08.3
Sentry Crash Report:


Attachments
Test for application/vnd.efi.iso (1.31 KB, patch)
2023-10-15 17:10 UTC, loqs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Trinity 2023-10-15 12:11:49 UTC
Hi KDE community,

For about 5 days now, the Mount ISO menu item under KDE Dolphin has no longer been available under Manjaro and EndeavorOS.
I have installed the current Dolphin plugin 23.08.2-2 for both Linux distros.
I can select from Dolphin's context menu that I want to mount ISO and disk images.
Nevertheless, when I mark an ISO file in the home directory or external hard drives, this menu item is not there.

This problem occurs on two different laptops. One laptop has Manjaro installed and the other laptop has EndeavorOS installed.
I have since reinstalled EndeavorOS to test, without success. The ISO Mount menu entry is still missing inDolphin.


STEPS TO REPRODUCE
1.) Manjaro and EndeavorOS installed.
2.) About Pamac, the latest version of the Dolphin. Plugin (23.08.2-2) installed in EndeavorOS.
Manjaro has already integrated the Dolphin plugin into your system after installation.
3.) Switched to Dolphin, opened the Dolphin menu via facilities.
4. In the context menu of the Dolphin, the item "Mount ISO and disk images" is activated.
5. Select an ISO file in the home directory and external storage medium with the right mouse button.
6. A menu opens in which the Mount ISO menu item has no longer been available under Manjaro and EndeavourOS for about 5 days.


SOFTWARE/OS VERSIONS
Linux: Manajro and EndevourOS
KDE Plasma Version: 5.27.8 
KDE Frameworks Version:  5.110.0
Qt Version: 5.15.11
Kernel Version: 6.5.7-arch1-1 (64-bit)
Graphics Platform: X11 with Manjaro and Wayland with EndevourOS

Thanks for your Support :)
Comment 1 loqs 2023-10-15 17:10:37 UTC
Created attachment 162325 [details]
Test for application/vnd.efi.iso

Does the attached patch help?
Comment 2 loqs 2023-10-15 17:11:44 UTC
Related downstream bug report https://bugs.archlinux.org/task/79971
Comment 3 Dashon 2023-10-15 17:43:51 UTC
I'm also affected. As the the attached arch bug report mentions. The breakage is caused by upgrading the package shared-mime-info.
Comment 4 joekamprad 2023-10-15 18:40:45 UTC
(In reply to loqs from comment #1)
> Created attachment 162325 [details]
> Test for application/vnd.efi.iso
> 
> Does the attached patch help?

I have tested the patch and the dolphin-plugins package with it does work here to show the option in context menu again!
thanks @loqs  !
Comment 5 joekamprad 2023-10-16 18:34:28 UTC
Only to complete have reproduced the same on Archlinux itself, exactly the same. 
EndeavourOS is using packages from archrepo directly  so no wonder it is the same.
Comment 7 Bug Janitor Service 2023-10-18 00:10:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/dolphin-plugins/-/merge_requests/43
Comment 8 Bug Janitor Service 2023-10-18 22:45:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/dolphin-plugins/-/merge_requests/44
Comment 9 Sylas 2023-11-08 19:09:13 UTC
Been having same issue since day this was posted. Would appreciate info on how to apply the .patch file.
Comment 10 Bug Janitor Service 2023-11-11 15:32:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/dolphin-plugins/-/merge_requests/46
Comment 11 Eric Armbruster 2023-11-11 15:34:11 UTC
Git commit aec8511a5915c35bdbdad3fad65829a61550e5e5 by Eric Armbruster.
Committed on 11/11/2023 at 16:34.
Pushed by eric into branch 'master'.

mountisoaction: add preferred raw disk mimetypes

shared-mime-info prefers application/vnd.efi.img and application/vnd.efi.iso over

application/x-raw-disk-image and application/x-cd-image since

https://gitlab.freedesktop.org/xdg/shared-mime-info/-/releases/2.3

M  +3    -1    mountiso/mountisoaction.cpp
M  +3    -1    mountiso/mountisoaction.json

https://invent.kde.org/sdk/dolphin-plugins/-/commit/aec8511a5915c35bdbdad3fad65829a61550e5e5
Comment 12 Eric Armbruster 2023-11-12 11:21:54 UTC
Git commit 507052906beca5d66991d156036bec0d75708556 by Eric Armbruster.
Committed on 12/11/2023 at 12:20.
Pushed by eric into branch 'release/23.08'.

mountisoaction: add preferred raw disk mimetypes

shared-mime-info prefers application/vnd.efi.img and application/vnd.efi.iso over

application/x-raw-disk-image and application/x-cd-image since

https://gitlab.freedesktop.org/xdg/shared-mime-info/-/releases/2.3


(cherry picked from commit aec8511a5915c35bdbdad3fad65829a61550e5e5)

M  +3    -1    mountiso/mountisoaction.cpp
M  +3    -1    mountiso/mountisoaction.json

https://invent.kde.org/sdk/dolphin-plugins/-/commit/507052906beca5d66991d156036bec0d75708556