mountisoaction: add preferred raw disk mimetypes

shared-mime-info prefers application/vnd.efi.img and application/vnd.efi.iso over

application/x-raw-disk-image and application/x-cd-image since

https://gitlab.freedesktop.org/xdg/shared-mime-info/-/releases/2.3

BUG: 475659


(cherry picked from commit aec8511a5915c35bdbdad3fad65829a61550e5e5)